compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_of_public_constant_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub const max_size: Int
+ pub const max_size: Float
