compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_of_public_function_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn add(Int, Int) -> Int
+ pub fn add(Float, Float) -> Float
