compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__deprecating_public_function_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn add
+ @deprecated(...)
+ pub fn add
