compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__function_parameter_length_change_is_major2.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn x() -> fn(Int, Int, Int) -> Int
+ pub fn x() -> fn(Int, Int) -> Int
