compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__making_custom_type_internal_while_keeping_alias_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type OldType {
-   Wibble
-   Wobble
- }
+ pub type OldType = NewType
