compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__making_private_custom_type_public_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
+ pub type Wibble
